--- a/project1.html
+++ b/project1.html
@@ -46,7 +46,7 @@
             <p class="program">
             <h6>Role</h6>
             </p>
-            <p class="institution">Lead UI designer</p>
+            <p class="prj-sub">Lead UI designer</p>
             <p class="program">
             <h6>Responsibilities</h6>
             </p>
@@ -116,21 +116,12 @@
             </section>
     </div>
 
-    <section class="first-full-image">
-        <img src="./Images/D – HP 5.jpg" class="full-img">
-        <img src="./Images/D – L1 – What we do.jpg" class="full-img">
-        <img src="./Images/D – Content – Exhibitons (1) copy.jpg" class="full-img">
-        <img src="./Images/D – Listing – What's on v1b (1) copy.jpg" class="full-img">
+    <section class="pas-full-image">
+        <img src="./Images/PAS/D – HP 5.jpg" class="full-img">
+        <img src="./Images/PAS/D – L1 – What we do.jpg" class="full-img2">
+        <img src="./Images/PAS/D – Content – Exhibitons (1) copy.jpg" class="full-img3">
+        <img src="./Images/PAS/D – Listing – What's on v1b (1) copy.jpg" class="full-img4">
     </section>
-
-    <section class="sub-full-image">
-        <img src="./Images/D – Content – Exhibitons (1) copy.jpg" class="full-img">
-        <img src="./Images/D – Listing – What's on v1b (1) copy.jpg" class="full-img">
-    </section>
-
-
-
-
 
 
     <section class="project-buttons">
