--- a/project2.html
+++ b/project2.html
@@ -38,15 +38,15 @@
 
 
 
-    <div class='about'>
+    <div class='case-study'>
         <section class="about-left-prj">
             <p class="program">
-            <h5 class="project-type">Native mobile app</h5>
+            <h5 class="project-type">Cross-platform native application</h5>
             </p>
             <p class="program">
             <h6>Role</h6>
             </p>
-            <p class="institution">Lead digital designer</p>
+            <p class="prj-sub">Lead digital designer</p>
             <p class="program">
             <h6>Responsibilities</h6>
             </p>
@@ -64,7 +64,7 @@
                 intuitive, and user-friendly.</p><br>
 
             <section class="imagery">
-                <img src="./Images/Group 1235.jpg" class="preview-img">
+                <img src="./Images/STV/Group 1229.jpg" class="stv-preview-img">
             </section>
 
             <h5 class="about-heading">Discovery</h5>
@@ -90,7 +90,7 @@
             </section>
 
             <section class="imagery">
-                <img src="./Images/Group 1236.jpg" class="preview-img">
+                <img src="./Images/STV/Desktop – Menu.jpg" class="preview-img">
             </section>
 
             <h5 class="about-heading">Solution</h5>
@@ -116,6 +116,13 @@
                     users.</p><br>
             </section>
     </div>
+
+    <section class="stv-full-image">
+        <img src="./Images/STV/Mobile – Homepage (1) 2.jpg" class="full-img">
+        <img src="./Images/STV/Mobile – L1 (1) 1.jpg" class="full-img">
+        <img src="./Images/STV/Mobile – Content example – Vessel stability 1.jpg" class="full-img">
+        <img src="./Images/STV/Mobile – Content example – Floatation (1) 1.jpg" class="full-img">
+    </section>
 
     <section class="project-buttons">
         <a href="project1.html" class="previous-button">
