--- a/project3.html
+++ b/project3.html
@@ -39,7 +39,7 @@
 
 
 
-    <div class='about'>
+    <div class='case-study'>
         <section class="about-left-prj">
             <p class="program">
             <h5 class="project-type">Brand and website design</h5>
@@ -61,7 +61,7 @@
             <p>As a new entity, CSLR needed both a brand and a website.</p><br>
 
             <section class="imagery">
-                <img src="./Images/HPCSLR.png" class="preview-img">
+                <img src="./Images/HOMEPAGE/HPCSLR.png" class="preview-img">
             </section>
 
             <h5 class="about-heading">Discovery</h5>
@@ -92,7 +92,7 @@
             </section>
 
             <section class="imagery">
-                <img src="./Images/IA-CSLR.jpg" class="preview-img">
+                <img src="./Images/CSLR/IA CSLR - Frame 3 (9) 1.jpg" class="preview-img">
             </section>
 
             <h5 class="about-heading">Solution</h5>
@@ -116,7 +116,7 @@
             </section>
 
             <section class="imagery">
-                <img src="./Images/CSLRLogo.jpg" class="preview-cslr">
+                <img src="./Images/CSLR/CSLRLogo.jpg" class="preview-cslr">
             </section>
 
             <section>
@@ -132,6 +132,13 @@
                     the financial sector.</p>
             </section>
     </div>
+
+    <section class="cslr-full-image">
+        <img src="./Images/CSLR/Homepage (1) 2.jpg" class="cslrfull-img">
+        <img src="./Images/CSLR/Landing page 1.jpg" class="cslrfull-img2">
+        <img src="./Images/CSLR/content 1.jpg" class="cslrfull-img3">
+        <img src="./Images/CSLR/Group 1250.jpg" class="cslrfull-img4">
+    </section>
 
     <section class="project-buttons">
         <a href="project2.html" class="previous-button">
