--- a/about.html
+++ b/about.html
@@ -55,52 +55,32 @@
 
             <h5 class="about-heading">Education</h5>
             <section>
-                <p class="program">
                 <h6>Front-End Development</h6>
-                </p>
                 <p class="institution">General Assembly | 2023</p>
-                <p class="program">
                 <h6>UX & UI Design</h6>
-                </p>
                 <p class="institution">RMIT | 2020, 2021</p>
-                <p class="program">
                 <h6>Bachelor of Arts (Honours), Psychology</h6>
-                </p>
                 <p class="institution">University of Queensland | 2014</p>
-                <p class="program">
                 <h6>Bachelor of Arts (Psychology & Criminology)</h6>
-                </p>
-                <p>University of Queensland | 2010 - 2013</p>
+                <p class="institution">University of Queensland | 2010 - 2013</p>
             </section>
 
             <h5 class="about-heading">Skills</h5>
-            <p class="program">
             <h6>Digital Design</h6>
-            </p>
             <p class="institution">User journeys, user interviews, user testing, stakeholder workshops, data
                 analysis,
                 report writing, information architecture & treejack testing, site-mapping, wireframing, prototyping,
                 accessibility, UI design</p>
-            <p class="program">
             <h6>Graphic Design</h6>
-            </p>
             <p class="institution">Brand development</p>
-            <p class="program">
             <h6>Front-End Development</h6>
-            </p>
             <p class="institution">HTML, CSS, Javascript</p>
-            <p class="program">
             <h6>Data Analysis</h6>
-            </p>
             <p class="institution">Google Analytics (GA4)</p>
-            <p class="program">
             <h6>Tools</h6>
-            </p>
             <p class="institution">Figma, Figjam, Miro, Adobe Suite, GatherContent, Octopus, Optimal Workshop,
                 Bugherd</p>
-            <p class="program">
             <h6>Languages</h6>
-            </p>
             <p class="institution">English, Croatian</p>
         </section>
     </div>
