--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h1>Hello</h1><img src="./Images/HOMEPAGE/noun-hello-199863 2.svg" alt="wave" class="wave">
         </div><br>
         <div class=intro-text>
-            <h4>I'm Iva, a UX/UI designer transforming insights<br>into interfaces.</h4>
+            <h4>I'm Iva, a UX/UI designer transforming insights into interfaces.</h4>
         </div>
         <div class="small-intro">
             <h6>Scroll on for the good stuff</h6>
