--- a/project1.html
+++ b/project1.html
@@ -40,16 +40,10 @@
 
     <div class='case-study'>
         <section class="about-left-prj">
-            <p class="program">
             <h5 class="project-type">Website Design</h5>
-            </p>
-            <p class="program">
             <h6>Role</h6>
-            </p>
             <p class="prj-sub">Lead UI designer</p>
-            <p class="program">
             <h6>Responsibilities</h6>
-            </p>
             <p class="prj-sub">UX research, UI design</p>
         </section>
         <section class="about-right">
@@ -127,17 +121,18 @@
     <section class="project-buttons">
         <a href="project3.html" class="previous-button">
             <div class=top-line>
-                <img src="./Images/ICONS/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next">
-                <p>Previous project</p>
+                <img src="./Images/ICONS/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next"
+                    class="arrow">
+                <p>Previous</p>
             </div>
-            <h6>Compensation Scheme of Last Resort</h6>
+            <h6 class="top-text">Compensation Scheme of Last Resort</h6>
         </a>
         <a href="project2.html" class="next-button">
             <div class=top-line>
-                <p>Next project</p><img src="./Images/ICONS/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
-                    alt="arrow-next">
+                <p>Next</p><img src="./Images/ICONS/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
+                    alt="arrow-next" class="arrow">
             </div>
-            <h6>Safe Transport Victoria</h6>
+            <h6 class="bottom-line">Safe Transport Victoria</h6>
         </a>
     </section>
 
