--- a/project2.html
+++ b/project2.html
@@ -40,16 +40,10 @@
 
     <div class='case-study'>
         <section class="about-left-prj">
-            <p class="program">
             <h5 class="project-type">Cross-platform native application</h5>
-            </p>
-            <p class="program">
             <h6>Role</h6>
-            </p>
             <p class="prj-sub">Lead digital designer</p>
-            <p class="program">
             <h6>Responsibilities</h6>
-            </p>
             <p class="prj-sub">UX research, UI design</p>
         </section>
         <section class="about-right">
@@ -124,20 +118,22 @@
         <img src="./Images/STV/Mobile – Content example – Floatation (1) 1.jpg" class="full-img">
     </section>
 
+
     <section class="project-buttons">
         <a href="project1.html" class="previous-button">
             <div class=top-line>
-                <img src="./Images/ICONS/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next">
-                <p>Previous project</p>
+                <img src="./Images/ICONS/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next"
+                    class="arrow">
+                <p>Previous</p>
             </div>
-            <h6>Parramatta Artist Studio</h6>
+            <h6 class="top-text">Parramatta Artist Studio</h6>
         </a>
         <a href="project3.html" class="next-button">
             <div class=top-line>
-                <p>Next project</p><img src="./Images/ICONS/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
-                    alt="arrow-next">
+                <p>Next</p><img src="./Images/ICONS/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
+                    alt="arrow-next" class="arrow">
             </div>
-            <h6>Compensation Scheme of Last Resort</h6>
+            <h6 class="bottom-line">Compensation Scheme of Last Resort</h6>
         </a>
     </section>
 
