--- a/project3.html
+++ b/project3.html
@@ -41,16 +41,10 @@
 
     <div class='case-study'>
         <section class="about-left-prj">
-            <p class="program">
-            <h5 class="project-type">Brand and website design</h5>
-            </p>
-            <p class="program">
+            <h5 class="project-type">Brand development and website design</h5>
             <h6>Role</h6>
-            </p>
             <p class="institution">Lead digital designer</p>
-            <p class="program">
             <h6>Responsibilities</h6>
-            </p>
             <p class="prj-sub">Brand development, UX research, UI design</p>
         </section>
         <section class="about-right">
@@ -140,22 +134,25 @@
         <img src="./Images/CSLR/Group 1250.jpg" class="cslrfull-img4">
     </section>
 
+
     <section class="project-buttons">
         <a href="project2.html" class="previous-button">
             <div class=top-line>
-                <img src="./Images/ICONS/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next">
-                <p>Previous project</p>
+                <img src="./Images/ICONS/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next"
+                    class="arrow">
+                <p>Previous</p>
             </div>
-            <h6>Safe Transport Victoria</h6>
+            <h6 class="top-text">Safe Transport Victoria</h6>
         </a>
         <a href="project1.html" class="next-button">
             <div class=top-line>
-                <p>Next project</p><img src="./Images/ICONS/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
-                    alt="arrow-next">
+                <p>Next</p><img src="./Images/ICONS/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
+                    alt="arrow-next" class="arrow">
             </div>
-            <h6>Parramatta Artist Studio</h6>
+            <h6 class="bottom-line">Parramatta Artist Studio</h6>
         </a>
     </section>
+
 
 
 
