--- a/project1.html
+++ b/project1.html
@@ -46,9 +46,9 @@
             <h6>Responsibilities</h6>
             <p class="prj-sub">UX research, UI design</p>
         </section>
-        <section class="about-right">
+        <section class="about-right-prj">
             <h5 class="project-heading">Background</h5>
-            <p>Parramatta Artists' Studios (PAS) is a creative hub based in Western Sydney, Australia. It offers
+            <p>Parramatta Artists Studios (PAS) is a creative hub based in Western Sydney, Australia. It offers
                 professional studio spaces, residencies, and development programs for visual artists at various stages
                 of their careers.</p><br>
 
