--- a/project2.html
+++ b/project2.html
@@ -46,7 +46,7 @@
             <h6>Responsibilities</h6>
             <p class="prj-sub">UX research, UI design</p>
         </section>
-        <section class="about-right">
+        <section class="about-right-prj">
             <h5 class="project-heading">Background</h5>
             <p>Safe Transport Victoria (STV) is responsible for ensuring the safety and regulation of the state’s
                 transport systems, including public transport, roads, and maritime operations.</p><br>
@@ -126,7 +126,7 @@
                     class="arrow">
                 <p>Previous</p>
             </div>
-            <h6 class="top-text">Parramatta Artist Studio</h6>
+            <h6 class="top-text">Parramatta Artists Studios</h6>
         </a>
         <a href="project3.html" class="next-button">
             <div class=top-line>
