--- a/project3.html
+++ b/project3.html
@@ -47,7 +47,7 @@
             <h6>Responsibilities</h6>
             <p class="prj-sub">Brand development, UX research, UI design</p>
         </section>
-        <section class="about-right">
+        <section class="about-right-prj">
             <h5 class="project-heading">Background</h5>
             <p>The Compensation Scheme of Last Resort (CSLR) is a newly established scheme helping victims of financial
                 misconduct receive compensation, which was previously unavailable to them.</p><br>
@@ -149,7 +149,7 @@
                 <p>Next</p><img src="./Images/ICONS/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
                     alt="arrow-next" class="arrow">
             </div>
-            <h6 class="bottom-line">Parramatta Artist Studio</h6>
+            <h6 class="bottom-line">Parramatta Artists Studios</h6>
         </a>
     </section>
 
