--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 <body>
     <nav class="navbar">
         <div class="left-nav">
-            <h6><a href="index.html" class="nav-item">Iva Dujmovic</a></h6>
+            <h6><a href="index.html" class="nav-item-desktop">Iva Dujmovic</a></h6>
+            <h6><a href="index.html" class="nav-item-mobile"><img
+                        src="./Images/ICONS/home_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="home"
+                        class="home"></a></h6>
         </div>
         <ul class=right-nav>
             <h6>
@@ -60,7 +63,7 @@
 
     <section class="projects" id="projects">
         <a href="project1.html" class="tile pas">
-            <h2 class='project-name'>Parramatta Artist Studios</h2>
+            <h2 class='project-name'>Parramatta Artists Studios</h2>
             <h6>
                 <ul class=project-role>
                     <li class="list-start">UX research</li>
