--- a/project3.html
+++ b/project3.html
@@ -17,11 +17,14 @@
 <body>
     <nav class="navbar">
         <div class="left-nav">
-            <h6><a href="index.html" class="nav-item">Iva Dujmovic</a></h6>
+            <h6><a href="index.html" class="nav-item-desktop">Iva Dujmovic</a></h6>
+            <h6><a href="index.html" class="nav-item-mobile"><img
+                        src="./Images/ICONS/home_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="home"
+                        class="home"></a></h6>
         </div>
         <ul class=right-nav>
             <h6>
-                <li><a href="index.html#projects" class="nav-item">Projects</a></li>
+                <li><a href="#projects" class="nav-item">Projects</a></li>
             </h6>
             <h6>
                 <li><a href="about.html" class="nav-item">About</a></li>
