--- a/about.html
+++ b/about.html
@@ -45,15 +45,16 @@
             </p>
         </section>
         <section class="about-right">
-            <p>Psychology nerd meets creative, I am passionate about leveraging my understanding of human behaviour and
-                research skills to design user-friendly, intuitive and accessible digital products.</p><br>
+            <p>Psych grad meets creative, I'm passionate about leveraging my understanding of human behaviour and
+                research
+                skills to design user-friendly, intuitive and accessible digital products.
+            </p><br>
 
-            <p>With experience in the government and private sectors, I am skilled at stakeholder management, having
-                delivered successful websites and mobile applications, and have worked in the user interface space,
-                applying the same dedication, creativity and desire to innovate.</p><br>
+            <p>With experience in both government and private sectors, I have successfully delivered both websites and
+                mobile applications for B2B, finance, not-for-profit, medical research and regulatory clients.</p><br>
 
-            <p>In my downtime, I like to play pretend in the hopes of becoming a design/dev unicorn. See my github
-                here// like to dabble in developing in the hopes of becoming a design/dev unicorn
+            <p>Beyond design, I enjoy dabbling in the art of front-end coding with the hope of one day becoming a
+                design-dev unicorn.
             </p>
 
             <h5 class="about-heading">Education</h5>
