--- a/about.html
+++ b/about.html
@@ -46,8 +46,7 @@
         </section>
         <section class="about-right">
             <p>Psych grad meets creative, I'm passionate about leveraging my understanding of human behaviour and
-                research
-                skills to design user-friendly, intuitive and accessible digital products.
+                research skills to design user-friendly, intuitive and accessible digital products.
             </p><br>
 
             <p>With experience in both government and private sectors, I have successfully delivered both websites and
