--- a/project1.html
+++ b/project1.html
@@ -145,7 +145,7 @@
             <h3>Get in touch</h3>
             <img src="./Images/HOMEPAGE/noun-write-222484 3.svg" alt="pencil illustration" class="pencil">
         </div>
-        <h6 class="footer-text">Like what you see? Drop me a line via email or connect with me on Linkedin below.
+        <h6 class="footer-text">Interested in having a chat? Drop me a message or connect via Linkedin below.
         </h6>
         <div class="footer-links">
             <div class="contact-type">
