--- a/project1.html
+++ b/project1.html
@@ -23,7 +23,7 @@
         </div>
         <ul class=right-nav>
             <h6>
-                <li><a href="#projects" class="nav-item">Projects</a></li>
+                <li><a href="index.html#projects" class="nav-item">Projects</a></li>
             </h6>
             <h6>
                 <li><a href="about.html" class="nav-item">About</a></li>
