--- a/project1.html
+++ b/project1.html
@@ -34,7 +34,7 @@
         </ul>
     </nav>
 
-    <section class="image-text-button" style="background-image:url('./Images/PAS/Group 12462.jpg');">
+    <section class="image-text-button-pas" style="background-image:url('./Images/PAS/Group 12462.jpg');">
         <h3 class=title>Parramatta<br>Artists Studios</h3>
     </section>
 
