--- a/project3.html
+++ b/project3.html
@@ -35,7 +35,7 @@
         </ul>
     </nav>
 
-    <section class="image-text-button" style="background-image:url('./Images/HOMEPAGE/CSLR-BG.jpg');">
+    <section class="image-text-button-cslr" style="background-image:url('./Images/HOMEPAGE/CSLR-BG.jpg');">
         <h3 class=title>Compensation Scheme of Last Resort</h3>
     </section>
 
