--- a/project2.html
+++ b/project2.html
@@ -34,7 +34,7 @@
         </ul>
     </nav>
 
-    <section class="image-text-button" style="background-image:url('./Images/HOMEPAGE/STV-BG.jpg');">
+    <section class="image-text-button-stv" style="background-image:url('./Images/HOMEPAGE/STV-BG.jpg');">
         <h3 class=title>Safe Transport Victoria Boating Safety</h3>
     </section>
 
