--- a/project2.html
+++ b/project2.html
@@ -115,10 +115,10 @@
     </div>
 
     <section class="stv-full-image">
-        <img src="./Images/STV/Mobile – Homepage (1) 2.jpg" class="full-img">
-        <img src="./Images/STV/Mobile – L1 (1) 1.jpg" class="full-img">
-        <img src="./Images/STV/Mobile – Content example – Vessel stability 1.jpg" class="full-img">
-        <img src="./Images/STV/Mobile – Content example – Floatation (1) 1.jpg" class="full-img">
+        <img src="./Images/STV/Mobile – Homepage (1) 2.jpg" class="full-img-stv">
+        <img src="./Images/STV/Mobile – L1 (1) 1.jpg" class="full-img-stv">
+        <img src="./Images/STV/Mobile – Content example – Vessel stability 1.jpg" class="full-img-stv">
+        <img src="./Images/STV/Mobile – Content example – Floatation (1) 1.jpg" class="full-img-stv">
     </section>
 
 
