--- a/project1.html
+++ b/project1.html
@@ -108,7 +108,8 @@
                 </p><br>
                 <p>Finally, for readability, all colour combinations were tested to ensure colour contrast meets a
                     minimum of WCAG AA accessibility.</p><br>
-                <p>The final product successfully met the project goals, providing users with an intuitive, accessible,
+                <p>The final product successfully met the client's goals for the website, providing users with an
+                    intuitive, accessible,
                     and visually engaging experience.</p><br>
             </section>
     </div>
