--- a/project2.html
+++ b/project2.html
@@ -54,8 +54,8 @@
             <p>Safe Transport Victoria (STV) is responsible for ensuring the safety and regulation of the state’s
                 transport systems, including public transport, roads, and maritime operations.</p><br>
 
-            <p>With a heavily relied upon boating safety handbook available in PDF, STV requested this resource be
-                turned into a native mobile application users can access offline.</p><br>
+            <p>STV has a popular and important boating safety handbook, which was only available in PDF. They wanted
+                this resource to be turned into a native application and learning tool.</p><br>
 
             <p>Our goal was to translate the handbook’s detailed content into a format that would be accessible,
                 intuitive, and user-friendly.</p><br>
@@ -73,8 +73,11 @@
                 <p>This workshop led us to understand the primary reasons users reference the handbook: self education
                     and staying on the right side of the law. Consequently, we were able to identify important chapters
                     and top tasks. Against this, we analysed the information architecture, retaining information that
-                    aligned with the app’s requirements, and removing any that didn't. In addition to the above, the
-                    client also identified this as an opportunity to increase the public’s understanding of their role
+                    aligned with the app’s requirements, and removing any that didn't.</p><br>
+
+                <p>In addition to the above, the
+                    client also identified this project as an opportunity to increase the public’s understanding of
+                    their role
                     and presence. </p><br>
 
                 <p>Overall, we established that the solution needed to:</p><br>
@@ -92,20 +95,19 @@
 
             <h5 class="about-heading">Solution</h5>
             <section>
-                <p>With a solid understanding of the project, we got to designing the wireframes, taking a mobile first
-                    approach.</p><br>
+                <p>With a solid understanding of the project, I designed the wireframes.</p><br>
                 <p>Quick links were added to the top of the homepage, allowing direct access to sections we recognised
                     were most important during discovery. Followed by a dedicated area for campaign banners and the 4
                     chapters selected for the app.</p><br>
-                <p>Within the lower levels, we added ‘back’ and ‘next’ buttons to the top and bottom of each page,
+                <p>Within the lower levels, I added ‘back’ and ‘next’ buttons to the top and bottom of each page,
                     mimicking chapters in a book. These were labelled with the relevant section’s title for additional
                     clarity. </p><br>
-                <p>We colour coded chapters for easy navigation, applying one brand colour to each chapter.</p>
+                <p>Chapters were colour coded for easy navigation, applying one brand colour to each chapter.</p>
                 <br>
                 <p>Chapter buttons had accents of their respective colour to identification, with a full application on
                     hover for desktop.
                 </p><br>
-                <p>For additional engagement, we applied some fun visual elements to the design, including the Safe
+                <p>For additional engagement, I applied some fun visual elements to the design, including the Safe
                     Transport pattern and an ocean image in the background.</p><br>
                 <p>The successful transformation of the STV maritime safety handbook marked a significant achievement
                     for both our team and the client. By leveraging key insights gained during the discovery phase, we
