--- a/project3.html
+++ b/project3.html
@@ -63,7 +63,8 @@
 
             <h5 class="about-heading">Discovery</h5>
             <section>
-                <p>In order to understand the client’s needs we facilitated a number of discovery sessions and
+                <p>In order to understand the client’s needs, I, alongside our digital content lead, facilitated a
+                    number of discovery sessions and
                     interactive workshops with key stakeholders.</p><br>
 
                 <p>As a brand, CSLR required to be distinctively different from the Australian Financial Complaints
@@ -118,13 +119,23 @@
 
             <section>
                 <p class="sub-title">Website</p>
+                <p>To achieve the website's objectives, the claimant—the primary user—was central to all design
+                    decisions. Special attention was given to their emotional states throughout CSLR’s process which
+                    could range from stress and frustration to hope and resolution.</p><br>
+                <p>From content to UI, every detail of this website was considered with the goal of reducing cognitive
+                    overload. A smooth, simple journey from landing on the site to submitting a claim.</p><br>
+                <p>A content audit alongside the workshop activities allowed our content team to establish an intuitive
+                    information architecture, and simplify the client's content into plain English.</p>
+                <p>Simplicity was key for the typography, headings were placed to the left of the page for easy scanning
+                    of content, with the relevant content placed to the right.</p><br>
                 <p>The website’s interface is clean with plenty of white space, big bold headings and most content
                     presented in black and white. Brand colours were used sparingly, to prompt action or where content
                     called for a warm and welcoming tone. </p><br>
                 <p>To tie it all together, we applied elements of the brand graphics, using the morse pattern in the top
                     banners and as an embellishment where body copy has no heading.
                 </p><br>
-                <p>Collaborating closely with CSLR, both the brand and website launched successfully. The result is a
+                <p>Collaborating closely with CSLR, both the brand and website launched successfully, and on time. The
+                    result is a
                     modern, user-friendly website set to support victims of financial misconduct and build trust within
                     the financial sector.</p>
             </section>
