--- a/project2.html
+++ b/project2.html
@@ -55,7 +55,8 @@
                 transport systems, including public transport, roads, and maritime operations.</p><br>
 
             <p>STV has a popular and important boating safety handbook, which was only available in PDF. They wanted
-                this resource to be turned into a native application and learning tool.</p><br>
+                this resource to be turned into a native application and learning tool, accessible on both mobile and
+                desktop.</p><br>
 
             <p>Our goal was to translate the handbook’s detailed content into a format that would be accessible,
                 intuitive, and user-friendly.</p><br>
@@ -90,7 +91,7 @@
             </section>
 
             <section class="imagery">
-                <img src="./Images/STV/Desktop – Menu.jpg" class="preview-img">
+                <img src="./Images/STV/Group 1252.jpg" class="stv-preview-img2">
             </section>
 
             <h5 class="about-heading">Solution</h5>
