--- a/STV.html
+++ b/STV.html
@@ -126,7 +126,7 @@
 
 
     <section class="project-buttons">
-        <a href="project1.html" class="previous-button">
+        <a href="PAS.html" class="previous-button">
             <div class=top-line>
                 <img src="./Images/ICONS/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next"
                     class="arrow">
@@ -134,7 +134,7 @@
             </div>
             <h6 class="top-text">Parramatta Artists Studios</h6>
         </a>
-        <a href="project3.html" class="next-button">
+        <a href="CSLR.html" class="next-button">
             <div class=top-line>
                 <p>Next</p><img src="./Images/ICONS/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
                     alt="arrow-next" class="arrow">
