--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </section>
 
     <section class="projects" id="projects">
-        <a href="project1.html" class="tile pas">
+        <a href="PAS.html" class="tile pas">
             <h2 class='project-name'>Parramatta Artists Studios</h2>
             <h6>
                 <ul class=project-role>
@@ -80,7 +80,7 @@
             </div>
         </a>
         <br>
-        <a href="project2.html" class="tile stv">
+        <a href="STV.html" class="tile stv">
             <h2 class=project-name>Safe Transport Victoria</h2>
             <h6>
                 <ul class=project-role>
@@ -98,7 +98,7 @@
             </div>
         </a>
         <br>
-        <a href="project3.html" class="tile cslr">
+        <a href="CSLR.html" class="tile cslr">
             <h2 class=project-name>Compensation Scheme of Last Resort</h2>
             <h6>
                 <ul class=project-role>
