--- a/CSLR.html
+++ b/CSLR.html
@@ -150,7 +150,7 @@
 
 
     <section class="project-buttons">
-        <a href="project2.html" class="previous-button">
+        <a href="STV.html" class="previous-button">
             <div class=top-line>
                 <img src="./Images/ICONS/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next"
                     class="arrow">
@@ -158,7 +158,7 @@
             </div>
             <h6 class="top-text">Safe Transport Victoria</h6>
         </a>
-        <a href="project1.html" class="next-button">
+        <a href="PAS.html" class="next-button">
             <div class=top-line>
                 <p>Next</p><img src="./Images/ICONS/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
                     alt="arrow-next" class="arrow">
