--- a/PAS.html
+++ b/PAS.html
@@ -123,7 +123,7 @@
 
 
     <section class="project-buttons">
-        <a href="project3.html" class="previous-button">
+        <a href="CSLR.html" class="previous-button">
             <div class=top-line>
                 <img src="./Images/ICONS/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next"
                     class="arrow">
@@ -131,7 +131,7 @@
             </div>
             <h6 class="top-text">Compensation Scheme of Last Resort</h6>
         </a>
-        <a href="project2.html" class="next-button">
+        <a href="STV.html" class="next-button">
             <div class=top-line>
                 <p>Next</p><img src="./Images/ICONS/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
                     alt="arrow-next" class="arrow">
