--- a/STV.html
+++ b/STV.html
@@ -53,7 +53,7 @@
 
     <div class='case-study'>
         <section class="about-left-prj">
-            <h5 class="project-type">Cross-platform native application</h5>
+            <h5 class="project-type">Cross-platform native application design</h5>
             <h6>Role</h6>
             <p class="prj-sub">Lead digital designer</p>
             <h6>Responsibilities</h6>
