--- a/CSLR.html
+++ b/CSLR.html
@@ -29,7 +29,7 @@
         <div class="left-nav">
             <h6><a href="index.html" class="nav-item-desktop">Iva Dujmovic</a></h6>
             <h6><a href="index.html" class="nav-item-mobile"><img
-                        src="./Images/ICONS/home_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt="home"
+                        src="./Images/ICONS/home_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt="home icon"
                         class="home"></a></h6>
         </div>
         <ul class=right-nav>
@@ -189,12 +189,12 @@
         </h6>
         <div class="footer-links">
             <div class="contact-type">
-                <img src="./Images/ICONS/paper-plane-icon 1.png" alt="plane" class="mail-icon">
+                <img src="./Images/ICONS/paper-plane-icon 1.png" alt="plane icon" class="mail-icon">
                 <a href="mailto:idujmovic19@gmail.com">Email me</a>
             </div>
             <p>
             <div class="contact-type">
-                <img src="./Images/ICONS/linkedin.png" alt="plane" class="linkedin-icon">
+                <img src="./Images/ICONS/linkedin.png" alt="linkedin icon" class="linkedin-icon">
                 <a href="https://www.linkedin.com/in/ivadujmovic/" target="_blank"
                     rel="noopener noreferrer">Linkedin</a>
             </div>
