--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="left-nav">
             <h6><a href="index.html" class="nav-item-desktop">Iva Dujmovic</a></h6>
             <h6><a href="index.html" class="nav-item-mobile"><img
-                        src="./Images/ICONS/home_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt="home"
+                        src="./Images/ICONS/home_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt="home icon"
                         class="home"></a></h6>
         </div>
         <ul class=right-nav>
@@ -60,7 +60,8 @@
 
     <section class="hp-intro">
         <div class="hello">
-            <h1>Hello</h1><img src="./Images/HOMEPAGE/noun-hello-199863 2.svg" alt="wave" class="wave">
+            <h1>Hello</h1><img src="./Images/HOMEPAGE/noun-hello-199863 2.svg" alt="cartoon hand in a waving motion"
+                class="wave">
         </div><br>
         <div class=intro-text>
             <h4>I'm Iva, a UX/UI designer transforming insights into interfaces.</h4>
@@ -81,7 +82,7 @@
                 </ul>
             </h6>
             <div class="pas-show-hover">
-                <img src="./Images/HOMEPAGE/pasHP.png" alt="PAS mockups">
+                <img src="./Images/HOMEPAGE/pasHP.png" alt="Mobile and laptop mockups of the project">
                 <div class="cta">
                     <h6>View case study<h6>
                             <img src="./Images/ICONS/arrow_forward_20dp_FFFFFF_FILL0_wght500_GRAD0_opsz20.svg"
@@ -99,7 +100,7 @@
                 </ul>
             </h6>
             <div class="stv-show-hover">
-                <img src="./Images/HOMEPAGE/STVHP.png" alt="STV mockups">
+                <img src="./Images/HOMEPAGE/STVHP.png" alt="Mobile and laptop mockups of the project">
                 <div class="cta">
                     <h6>View case study<h6>
                             <img src="./Images/ICONS/arrow_forward_20dp_FFFFFF_FILL0_wght500_GRAD0_opsz20.svg"
@@ -118,7 +119,7 @@
                 </ul>
             </h6>
             <div class="cslr-show-hover">
-                <img src="./Images/HOMEPAGE/HPCSLR.png" alt="CSLR mockups">
+                <img src="./Images/HOMEPAGE/HPCSLR.png" alt="Mobile and laptop mockups of the project">
                 <div class="cta">
                     <h6>View case study<h6>
                             <img src="./Images/ICONS/arrow_forward_20dp_FFFFFF_FILL0_wght500_GRAD0_opsz20.svg"
@@ -138,12 +139,12 @@
         </h6>
         <div class="footer-links">
             <div class="contact-type">
-                <img src="./Images/ICONS/paper-plane-icon 1.png" alt="plane" class="mail-icon">
+                <img src="./Images/ICONS/paper-plane-icon 1.png" alt="paper plane icon" class="mail-icon">
                 <a href="mailto:idujmovic19@gmail.com">Email me</a>
             </div>
             <p>
             <div class="contact-type">
-                <img src="./Images/ICONS/linkedin.png" alt="plane" class="linkedin-icon">
+                <img src="./Images/ICONS/linkedin.png" alt="linkedin logo" class="linkedin-icon">
                 <a href="https://www.linkedin.com/in/ivadujmovic/" target="_blank"
                     rel="noopener noreferrer">Linkedin</a>
             </div>
