--- a/index.html
+++ b/index.html
@@ -40,21 +40,15 @@
 <body>
     <nav class="navbar">
         <div class="left-nav">
-            <h6><a href="index.html" class="nav-item-desktop">Iva Dujmovic</a></h6>
-            <h6><a href="index.html" class="nav-item-mobile"><img
-                        src="./Images/ICONS/home_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt="home icon"
-                        class="home"></a></h6>
+            <a href="index.html" class="nav-item-desktop">Iva Dujmovic</a>
+            <a href="index.html" class="nav-item-mobile"><img
+                    src="./Images/ICONS/home_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" alt="home icon"
+                    class="home"></a>
         </div>
         <ul class=right-nav>
-            <h6>
-                <li><a href="#projects" class="nav-item">Projects</a></li>
-            </h6>
-            <h6>
-                <li><a href="about.html" class="nav-item">About</a></li>
-            </h6>
-            <h6>
-                <li><a href="#contact" class="nav-item">Contact</a></li>
-            </h6>
+            <li><a href="#projects" class="nav-item">Projects</a></li>
+            <li><a href="about.html" class="nav-item">About</a></li>
+            <li><a href="#contact" class="nav-item">Contact</a></li>
         </ul>
     </nav>
 
