--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
             <p>With experience in both government and private sectors, I have successfully delivered both websites and
                 mobile applications for B2B, finance, not-for-profit, medical research and regulatory clients.</p><br>
 
-            <p>Beyond design, I enjoy dabbling in the art of front-end coding with the hope of one day becoming a
+            <p>Beyond design, I enjoy dabbling in the art of front-end development with the hope of one day becoming a
                 design-dev unicorn.
             </p>
 
