--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
         <div class="footer-links">
             <div class="contact-type">
                 <img src="./Images/ICONS/paper-plane-icon 1.png" alt="plane" class="mail-icon">
-                <a href="mailto:idujmovic19@gmail.com">Email me</a>
+                <a href="mailto:iva.dujmovic@hotmail.com">Email me</a>
             </div>
             <p>
             <div class="contact-type">
