--- a/PAS.html
+++ b/PAS.html
@@ -160,7 +160,7 @@
         </h6>
         <div class="footer-links">
             <div class="contact-type">
-                <img src="./Images/ICONS/paper-plane-icon 1.png" alt="plane icon" class="mail-icon">
+                <img src="./Images/ICONS/paper-plane-regular.svg" alt="plane icon" class="mail-icon">
                 <a href="mailto:iva.dujmovic@hotmail.com">Email me</a>
             </div>
             <p>
