--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
         </h6>
         <div class="footer-links">
             <div class="contact-type">
-                <img src="./Images/ICONS/paper-plane-icon 1.png" alt="plane" class="mail-icon">
+                <img src="./Images/ICONS/paper-plane-regular.svg" alt="plane" class="mail-icon">
                 <a href="mailto:iva.dujmovic@hotmail.com">Email me</a>
             </div>
             <p>
