--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </h6>
         <div class="footer-links">
             <div class="contact-type">
-                <img src="./Images/ICONS/paper-plane-icon 1.png" alt="paper plane icon" class="mail-icon">
+                <img src="./Images/ICONS/paper-plane-regular.svg" alt="paper plane icon" class="mail-icon">
                 <a href="mailto:iva.dujmovic@hotmail.com">Email me</a>
             </div>
             <p>
