--- a/CSLR.html
+++ b/CSLR.html
@@ -135,7 +135,7 @@
                 <p>From content to UI, every detail of this website was considered with the goal of reducing cognitive
                     overload. A smooth, simple journey from landing on the site to submitting a claim.</p><br>
                 <p>A content audit alongside the workshop activities allowed our content team to establish an intuitive
-                    information architecture, and simplify the client's content into plain English.</p>
+                    information architecture, and simplify the client's content into plain English.</p><br>
                 <p>Simplicity was key for the typography, headings were placed to the left of the page for easy scanning
                     of content, with the relevant content placed to the right.</p><br>
                 <p>The website’s interface is clean with plenty of white space, big bold headings and most content
