--- a/CSLR.html
+++ b/CSLR.html
@@ -74,8 +74,7 @@
             <h5 class="about-heading">Discovery</h5>
             <section>
                 <p>In order to understand the client’s needs, I, alongside our digital content lead, facilitated a
-                    number of discovery sessions and
-                    interactive workshops with key stakeholders.</p><br>
+                    number of discovery sessions and interactive workshops with key stakeholders.</p><br>
 
                 <p>As a brand, CSLR required to be distinctively different from the Australian Financial Complaints
                     Authority (AFCA), an independent dispute resolution service. Serving a different function within the
@@ -98,6 +97,7 @@
                     </li>
                 </ul><br>
             </section>
+
 
             <section class="imagery">
                 <img src="./Images/CSLR/IA CSLR - Frame 3 (9) 1.jpg" class="preview-img">
@@ -190,7 +190,7 @@
         <div class="footer-links">
             <div class="contact-type">
                 <img src="./Images/ICONS/paper-plane-regular.svg" alt="plane icon" class="mail-icon">
-                <a href="mailto:iva.dujmovic@hotmail.com">Email me</a>
+                <a href="mailto:idujmovic19@gmail.com">Email me</a>
             </div>
             <p>
             <div class="contact-type">
