--- a/STV.html
+++ b/STV.html
@@ -165,7 +165,7 @@
         <div class="footer-links">
             <div class="contact-type">
                 <img src="./Images/ICONS/paper-plane-regular.svg" alt="plane icon" class="mail-icon">
-                <a href="mailto:iva.dujmovic@hotmail.com">Email me</a>
+                <a href="mailto:idujmovic19@gmail.com">Email me</a>
             </div>
             <p>
             <div class="contact-type">
