--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="footer-links">
             <div class="contact-type">
                 <img src="./Images/ICONS/paper-plane-regular.svg" alt="paper plane icon" class="mail-icon">
-                <a href="mailto:iva.dujmovic@hotmail.com">Email me</a>
+                <a href="mailto:idujmovic19@gmail.com">Email me</a>
             </div>
             <p>
             <div class="contact-type">
